unpackaged/main/default/objects/Studio_Purchases__c/Studio_Purchases__c.object-meta.xml
<CustomObject>
    <description>A set of products and items purchased for a studio.</description>
    <label>Studio Purchases</label>
    <nameField>
        <label>Studio Purchases Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studio Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>