unpackaged/main/default/objects/Studio_Purchases__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>The date this item was purchased</description>
    <label>Purchase Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>