unpackaged/main/default/objects/Studio_Purchases__c/fields/Quantity_purchased__c.field-meta.xml
<CustomField>
    <fullName>Quantity_purchased__c</fullName>
    <description>The quantity of this item purchased</description>
    <label>Quantity purchased</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>