unpackaged/main/default/objects/Studio_Purchases__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this product been returned?</description>
    <inlineHelpText>Tick this box if this product has been returned due to it being faulty, etc.</inlineHelpText>
    <label>Returned?</label>
    <type>Checkbox</type>
</CustomField>