unpackaged/main/default/objects/Studio_Purchases__c/fields/Total_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_cost__c</fullName>
    <description>The total amount spent, equal to the cost of a product multiplied by the quantity of that product purchased</description>
    <formula>Price__c  *  Quantity_purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>