unpackaged/main/default/objects/Studio_Purchases__c/listViews/Main_View.listView-meta.xml
<ListView>
    <fullName>Main_View</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity_purchased__c</columns>
    <columns>Total_cost__c</columns>
    <columns>Returned__c</columns>
    <filterScope>Mine</filterScope>
    <label>Main View</label>
</ListView>